# personal-wiki

./: .env.example  .gitignore  INTEGRATIONS.md  LICENSE  PLAN.md  README.md  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt
core/: analyzer.py  clusterer.py  conversation_memory.py  cost_estimator.py  embedder.py  extractor.py  provider.py  providers.toml  scanner.py
memoryos/: __init__.py  cli.py  scan_runner.py
memoryos_mcp/: mcp_server.py  onboarding.py  scheduler.py
proxy/: config.toml  proxy_server.py
web/: server.py
web/static/: app.js  index.html  style.css
wiki/: context_builder.py  wiki_manager.py
