[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryos-personal"
version = "0.1.7"
description = "让所有 AI 工具永久认识你的本地个人记忆系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["AI", "memory", "personal", "wiki", "MCP", "Claude", "Cursor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.97.0",
    "openai>=2.32.0",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.0",
    "chromadb>=1.5.0",
    "scikit-learn>=1.8.0",
    "numpy>=2.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "tiktoken>=0.12.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.46.0",
    "aiohttp>=3.13.0",
    "brotli>=1.2.0",
    "mcp[cli]>=1.27.0",
    "python-dotenv>=1.2.0",
    "rich>=15.0.0",
    "tqdm>=4.67.0",
    "pydantic>=2.13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/hebeiwang353-bit/personal-wiki"
Repository = "https://github.com/hebeiwang353-bit/personal-wiki"

[project.scripts]
# 主命令：memoryos install / scan / status / proxy / web
memoryos = "memoryos.cli:main"

[tool.setuptools.packages.find]
# 自动发现所有含 __init__.py 的包
where = ["."]
include = ["memoryos*", "core*", "wiki*", "memoryos_mcp*", "proxy*", "web*"]

[tool.setuptools.package-data]
# 把非 .py 文件也打包进去
"*" = [
    "*.toml",
    "*.example",
    "static/**/*",
    "*.html",
    "*.js",
    "*.css",
]
